Se terminó de hacer la verificación del back del login y edit del perfil, y el front del login. Faltan las verificaciones back y front del multer

--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -131,3 +131,19 @@ body {
     color: #fff;
   }
   
+  .errores {
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+  
+  }
+  
+  .errores ul {
+    background-color: #ff0707b9;
+    padding: 30px;
+    border-radius: 15px;
+    list-style: none;
+    line-height: 1.5;
+    color: #f6f6f6;
+  }
