--- a/site/views/editProduct.ejs
+++ b/site/views/editProduct.ejs
@@ -26,39 +26,54 @@
                     <input type="file" id="imageEdit" class="form-control-file mb-3" data-default-file="" data-height="500">
                 </div>
                 <div class="col-md-6">
-                    <% for (let prop in prod) { %>
-                        <% if(prop == 'id' || prop == 'image' ){ %>
-                            <div class="input-group-prepend mb-2">
-                                <label hidden class="input-group-text text-left text-capitalize col-md-4"><%= `${prop}:` %></label>
-                                <input name="<%= prop %>" type="text" hidden class="input-group form-control col-8" value="<%= `${prod[prop]}` %>">
-                            </div>
-                            <% } else if( prop == 'createdAt' || prop == 'updatedAt'){ %>
-                                <div class="input-group-prepend mb-2">
-                                </div>
-                                <% } else if( prop.includes('categ') ){ %>
-                                    <div class="input-group-prepend mb-2">
-                                        <label class="input-group-text text-capitalize col-md-4"><%= `${prop}:` %></label>
-                                        <select name="<%= prop %>" class="input-group form-control col-8" aria-describedby="addon-wrapping">
-                                            <% for (let item of categ) { %>
-                                                <% if ( item.id == prod[prop]){ %>
-                                                    <option value="<%= item.id %>" seleted="selected"> <%= item.category %> </option>
-                                                    <% } else { %>
-                                                    <option value="<%= item.id %>"> <%= item.category %> </option>
-                                                    <% } %>
-                                                <% } %>
-                                        </select>
-                                    </div>
-                                    <% } else { %>
-                                        <div class="input-group-prepend mb-2">
-                                            <label class="input-group-text text-capitalize col-md-4"><%= `${prop}:` %></label>
-                                            <input name="<%= prop %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod[prop]}` %>" aria-describedby="addon-wrapping">
-                                        </div>
-                                        <% }; %>
-                                            <% }; %>
-                                                <div class="form-actions form-inline btn-toolbar mt-3 ml-auto text-center ">
-                                                    <input type="submit" value="Editar" formaction="/products/<%= prod.id %>/edit?_method=PUT" class="btn btn-primary btn-md-lg m-md-auto col-12 col-md-5 mb-3">
-                                                    <input type="submit" value="Eliminar" formaction="/products/<%= prod.id %>/delete?_method=DELETE" class="btn btn-danger btn-md-lg m-md-auto col-md-5">
-                                                </div>
+                    <!-- hidden data required on edit form -->
+                    <div class="input-group-prepend mb-2">
+                        <label hidden class="input-group-text text-left text-capitalize col-md-4"><%= `${Object.keys(prod)[0]}:` %></label>
+                        <input name="<%= Object.keys(prod)[0] %>" type="text" hidden class="input-group form-control col-8" value="<%= `${prod.id}` %>">
+                    </div>
+                    <div class="input-group-prepend mb-2">
+                        <label hidden class="input-group-text text-left text-capitalize col-md-4"><%= `${Object.keys(prod)[4]}:` %></label>
+                        <input name="<%= Object.keys(prod)[4] %>" type="text" hidden class="input-group form-control col-8" value="<%= `${prod.image}` %>">
+                    </div>
+
+                    <!-- Name // Description // Price // Discount -->
+                    <div class="input-group-prepend mb-2">
+                        <label class="input-group-text text-capitalize col-md-4"><%= `${Object.keys(prod)[1]}:` %></label>
+                        <input name="<%= Object.keys(prod)[1] %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod.name}` %>" aria-describedby="addon-wrapping">
+                    </div>
+                    <div class="input-group-prepend mb-2">
+                        <label class="input-group-text text-capitalize col-md-4"><%= `${Object.keys(prod)[2]}:` %></label>
+                        <input name="<%= Object.keys(prod)[2] %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod.description  }` %>" aria-describedby="addon-wrapping">
+                    </div>
+                    <div class="input-group-prepend mb-2">
+                        <label class="input-group-text text-capitalize col-md-4"><%= `${Object.keys(prod)[3]}:` %></label>
+                        <input name="<%= Object.keys(prod)[3] %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod.price}` %>" aria-describedby="addon-wrapping">
+                    </div>
+                    <div class="input-group-prepend mb-2">
+                        <label class="input-group-text text-capitalize col-md-4"><%= `${Object.keys(prod)[5]}:` %></label>
+                        <input name="<%= Object.keys(prod)[5] %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod.discount_id}` %>" aria-describedby="addon-wrapping">
+                    </div>
+
+                    <!-- Category -->
+                    <div class="input-group-prepend mb-2">
+                        <label class="input-group-text text-capitalize col-md-4"><%= `${Object.keys(prod)[6]}:` %></label>
+                        <select name="<%= prod.Category_id %>" class="input-group form-control col-8" aria-describedby="addon-wrapping">
+                                    <% for (let item of categ) { %>
+                                        <% if ( item.id == prod.id){ %>
+                                            <option selected value="<%= item.id %>" > <%= item.category %> </option>
+                                            <% } else { %>
+                                            <option value="<%= item.id %>" > <%= item.category %> </option>
+                                            <% } %>
+                                        <% } %>
+                                </select>
+                    </div>
+
+                    <!-- Edit // Delete Buttons -->
+                    <div class="form-actions form-inline btn-toolbar mt-3 ml-auto text-center ">
+                        <input type="submit" value="Editar" formaction="/products/<%= prod.id %>/edit?_method=PUT" class="btn btn-primary btn-md-lg m-md-auto col-12 col-md-5 mb-3">
+                        <input type="submit" value="Eliminar" formaction="/products/<%= prod.id %>/delete?_method=DELETE" class="btn btn-danger btn-md-lg m-md-auto col-md-5">
+                    </div>
+
                 </div>
             </form>
         </div>
