falta la verificación de las imágenes LAH en el front

--- a/site/views/editProfile.ejs
+++ b/site/views/editProfile.ejs
@@ -14,7 +14,7 @@
 
     <%- include('partials/head.ejs')%>
 
-    
+    <script src="/js/profileEdit.js"></script>
 
 </head>
 
@@ -40,7 +40,7 @@
            <% } %>
         </div>
 
-        <form action="/profile/edit/<%=user.id%>" method="POST" enctype="multipart/form-data" >
+        <form id="" action="/profile/edit/<%=user.id%>" method="POST" enctype="multipart/form-data" >
 
             <div class="input-group mb-3">
 
@@ -57,19 +57,19 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Nombre</span>
                     </div>
-                    <input type="text" class="form-control" aria-label="Default"aria-describedby="inputGroup-sizing-default" name="first_name" value="<%=user.first_name%>">
+                    <input id="first_name" type="text" class="form-control" aria-label="Default"aria-describedby="inputGroup-sizing-default" name="first_name" value="<%=user.first_name%>">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Apellido</span>
                     </div>
-                    <input type="text" class="form-control" aria-label="Default"aria-describedby="inputGroup-sizing-default" name="last_name" value="<%=user.last_name%>">
+                    <input id="last_name" type="text" class="form-control" aria-label="Default"aria-describedby="inputGroup-sizing-default" name="last_name" value="<%=user.last_name%>">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Tipo de usuario</span>
                     </div>
-                    <select name="user_type_id" class="custom-select" >
+                    <select id="user_type" name="user_type_id" class="custom-select" >
                         <% for (let i=0; i < roles.length; i++) { %>
                             <% if (roles[i].id == user.user_type_id) { %> 
                                 <option value="<%=roles[i].id%>" selected>
@@ -87,7 +87,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
                     </div>
-                    <input type="email" class="form-control" aria-label="Default"
+                    <input id="email" type="email" class="form-control" aria-label="Default"
                         aria-describedby="inputGroup-sizing-default" name="email" value=" <%=user.email%>">
                 </div>
 
@@ -95,7 +95,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Password</span>
                     </div>
-                    <input type="password" class="form-control" aria-label="Default"
+                    <input id="password" type="password" class="form-control" aria-label="Default"
                         aria-describedby="inputGroup-sizing-default" name="password" placeholder="Ingresa un nuevo password">
                 </div>
             </div>
@@ -110,6 +110,9 @@
     <!-- Footer section -->
     <%- include('partials/footer.ejs')%>
     <!-- Footer section end -->
+<!-- Sweet Alert JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="sweetalert2/dist/sweetalert2.all.min.js"></script>
 
 </body>
 
