--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/4fa9f35e5d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/login.css">
     <title>Ingreso de usuarios</title>
-    <script src="/js/login.js"></script>
+    <script src="/js/login.js"></script>  <!--  DESCOMENTAR!!!!!!! PARA QUE FUNCIONE EL JS del FRONT -->
 </head>
 <body>
     <div class="login-box">
