--- a/site/views/editProfile.ejs
+++ b/site/views/editProfile.ejs
@@ -40,7 +40,7 @@
            <% } %>
         </div>
 
-        <form id="" action="/profile/edit/<%=user.id%>" method="POST" enctype="multipart/form-data" >
+        <form id="form" action="/profile/edit/<%=user.id%>" method="POST" enctype="multipart/form-data" >
 
             <div class="input-group mb-3">
 
@@ -49,7 +49,7 @@
                       <span class="input-group-text" id="inputGroupFileAddon01">Avatar</span>
                     </div>
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="avatar" name="avatar"aria-describedby="inputGroupFileAddon01" >
+                      <input type="file" class="custom-file-input" id="avatar" name="avatar"aria-describedby="inputGroupFileAddon01"  >
                       <label class="custom-file-label" for="inputGroupFile01">Elegir avatar</label>
                     </div>
                 </div>
