--- a/site/views/editProfile.ejs
+++ b/site/views/editProfile.ejs
@@ -49,8 +49,8 @@
                       <span class="input-group-text" id="inputGroupFileAddon01">Avatar</span>
                     </div>
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="avatar" name="avatar"aria-describedby="inputGroupFileAddon01"  >
-                      <label class="custom-file-label" for="inputGroupFile01">Elegir avatar</label>
+                      <input type="file" class="custom-file-input file" id="avatar" name="avatar" accept=".jpg,.jpeg,.png" aria-describedby="avatar"  >
+                      <label class="custom-file-label" for="avatar">Elegir avatar</label>
                     </div>
                 </div>
                 <div class="input-group mb-3">
