localhost:3000/api/products conectada

--- a/site/views/editProfile.ejs
+++ b/site/views/editProfile.ejs
@@ -49,7 +49,7 @@
                       <span class="input-group-text" id="inputGroupFileAddon01">Avatar</span>
                     </div>
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input file" id="avatar" name="avatar" accept=".jpg,.jpeg,.png" aria-describedby="avatar"  >
+                      <input type="file" class="custom-file-input file" id="avatar" name="avatar"  aria-describedby="avatar"  >
                       <label class="custom-file-label" for="avatar">Elegir avatar</label>
                     </div>
                 </div>
