--- a/site/views/register.ejs
+++ b/site/views/register.ejs
@@ -124,7 +124,7 @@
   <div class="form-row">
     <div class="col-md-12 mb-3 file">
 
-        <input type="file"  id="avatar" name="avatar"  placeholder="Ingresa un avatar para tu perfil" class="file" accept=".jpg,.jpeg,.png" onchange="validateFileType()" >
+        <input type="file"  id="avatar" name="avatar"  placeholder="Ingresa un avatar para tu perfil" class="file" accept=".jpg,.jpeg,.png" >
 
 
       
